# sled-vl

./: LICENSE  README.md  package-lock.json  package.json  playwright.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  commands_test.rs  lib.rs  main.rs  sled_manager.rs
src/router/: index.ts
src/stores/: sled.ts
src/views/: Connections.vue  Data.vue  Home.vue  ImportExport.vue  Metadata.vue  Monitor.vue  Query.vue  Settings.vue
